--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL='http://localhost:4000'
+VITE_BACKEND_URL='https://doctor-appointments-website.onrender.com'
 VITE_RAZORPAY_KEY_ID='rzp_test_EtnIvPLai96MIB'
 
 
